Wrong facedot selection color with gpu subdivision #98571

Closed
opened 2022-06-03 10:44:04 +02:00 by Gilberto Rodrigues · 3 comments
Contributor

System Information
Operating system: Windows 11
Graphics card: RTX 3070

Blender Version
Broken: 3.3 alpha
Worked: 3.1

Short description of error
Selected faces have black facedot, unselected faces have orange facedot.

Exact steps for others to reproduce the error
default startup
check gpu subdivision in preferences
delete cube
add suzanne
add subdivision surface modifier
change to edit mode
press 3 for face selection
alt + z for xray view
click "On cage" display for the modifier
facedots will have inconsistent color with selection.

**System Information** Operating system: Windows 11 Graphics card: RTX 3070 **Blender Version** Broken: 3.3 alpha Worked: 3.1 **Short description of error** Selected faces have black facedot, unselected faces have orange facedot. **Exact steps for others to reproduce the error** default startup check gpu subdivision in preferences delete cube add suzanne add subdivision surface modifier change to edit mode press 3 for face selection alt + z for xray view click "On cage" display for the modifier facedots will have inconsistent color with selection.
Author
Contributor

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R
Gilberto Rodrigues changed title from Wrong facedot to Wrong facedot selection color with gpu subdivision 2022-06-03 10:48:37 +02:00

This issue was referenced by 7f7ed8e098

This issue was referenced by 7f7ed8e0989d3c6a3078404567e7da419d6f92f5

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-06-03 17:10:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98571
No description provided.