Fix T98571: corrupted face selection drawing with GPU subdivision

Simple typo in rB55e3930b253e.